--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,11 +7,9 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
+    environment: docker
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker images
