--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,8 @@ jobs:
     environment: docker
     steps:
     - uses: actions/checkout@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Build the Docker images
       env: 
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
